# HPC-environment

./: HPC-environment-install.sh  README.md
mpi_In_Xcode/: CMakeLists.txt  hello.cpp
mpi_cpp_examples/: CMakeLists.txt  hello  hello.cpp  hello.cxx
mpi_examples/: hello.f90  pi.f90  pi_nonblocking  pi_nonblocking.f90  ring_deadlock_free.f90
mpi_fortran_examples/: Makefile  hello  pi  piReduce.f90  ring_deadlock  ring_deadlock.f90  ring_deadlock_free
omp_In_Xcode/DerivedData/ModuleCache.noindex/: Session.modulevalidation
omp_In_Xcode/DerivedData/omp/: info.plist
omp_In_Xcode/DerivedData/omp/Index/DataStore/v5/units/: main.o-277GKMCAWLBMB
omp_In_Xcode/DerivedData/omp/Index/UniDB/omp.xcindex/v11/saved/: lock.mdb
omp_In_Xcode/DerivedData/omp/Logs/Debug/: 36911AC2-6F11-4011-B1E6-C3B45E9FE7C2.xcactivitylog  LogStoreManifest.plist
omp_In_Xcode/DerivedData/omp/Logs/Issues/: 19638D35-101C-4AB5-BD69-810AF3AABAB7.xcactivitylog  LogStoreManifest.plist
omp_In_Xcode/DerivedData/omp/TextIndex/: TextFragmentIndex-v7.idx
omp_In_Xcode/omp/: main.cpp
omp_In_Xcode/omp.xcodeproj/: project.pbxproj
omp_In_Xcode/omp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
omp_In_Xcode/omp.xcodeproj/project.xcworkspace/xcuserdata/Yuyang.xcuserdatad/: UserInterfaceState.xcuserstate
omp_In_Xcode/omp.xcodeproj/xcuserdata/Yuyang.xcuserdatad/xcschemes/: xcschememanagement.plist
openmp_cpp_examples/: CMakeLists.txt  main.cpp
openmp_examples/: Makefile  atomic.f90  hello.f90  naive_example.f90
openmp_fortran_examples/: pi.f90
